src/test/ui/type-alias-impl-trait/issue-65679-inst-opaque-ty-from-val-twice.full_tait.stderr
error: fatal error triggered by #[rustc_error]
  --> $DIR/issue-65679-inst-opaque-ty-from-val-twice.rs:17:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

